--- a/latex/main.tex
+++ b/latex/main.tex
@@ -177,6 +177,7 @@
 
 
 \include{sections/1-introduzione}
+\include{sections/2-attacchi}
 
 %----------------------------------------------------------------------------------------
 %	CLOSING SLIDE
@@ -184,11 +185,11 @@
 
 \begin{frame}[plain] 
     \begin{center}
-		{\Huge References:}
+		{\Huge Riferimento a fonti esterne:}
             
 	\end{center}
 	\begin{itemize}
-	    \item Primo riferimento
+	    \item \href{https://csrc.nist.gov/pubs/fips/180-4/upd1/final}{Link al documento NIST FIPS 180-4}
 	\end{itemize}
 \end{frame}
 
