--- a/latex/main.tex
+++ b/latex/main.tex
@@ -190,6 +190,8 @@
 	\end{center}
 	\begin{itemize}
 	    \item \href{https://csrc.nist.gov/pubs/fips/180-4/upd1/final}{Link al documento NIST FIPS 180-4}
+		\item \href{https://shattered.io}(Google SHA-1 collision: shattered)
+		\item \href{https://shattered.io/static/shattered.pdf}{The first collision for full SHA-1}
 	\end{itemize}
 \end{frame}
 
