update presentazione, aggiunta paradosso del compleanno

--- a/latex/sections/1-introduzione.tex
+++ b/latex/sections/1-introduzione.tex
@@ -70,7 +70,7 @@ per correggere un difetto nell'algoritmo originale.
 
 \vspace{1cm}
 
-I digest prodotti da SHA-1 sono di \textbf{160 bit}, e ogni messaggio può essere al massimo di \textbf{\(2^{64} - 1\) bit}.
+I digest prodotti da SHA-1 sono di \textbf{160 bit}, e ogni messaggio può essere al massimo di \(2^{64} - 1\) bit.
 \end{frame}
 
 \begin{frame}
