--- a/latex/main.tex
+++ b/latex/main.tex
@@ -178,6 +178,7 @@
 
 \include{sections/1-introduzione}
 \include{sections/2-attacchi}
+\include{sections/3-utilizzi}
 
 %----------------------------------------------------------------------------------------
 %	CLOSING SLIDE
