--- a/latex/sections/2-attacchi.tex
+++ b/latex/sections/2-attacchi.tex
@@ -58,8 +58,9 @@ Nel caso di SHA-1, dato che l'output è a 160 bit, se si potesse generare $2^{80
 
 \begin{frame}
 \frametitle{Primi attacchi a SHA-1}
-Nel 2005 il team di ricerca della Shandong University annunciò il primo attacco a SHA-1, con una complessità di \(2^{69}\) operazioni. Pochi mesi dopo fu annunciato un attacco a \(2^{63}\) operazioni.
-Un normale attacco che sfrutta il paradosso del compleanno avrebbe una complessità di \(2^{80}\) operazioni.
+Nel \textbf{2005} il team di ricerca della Shandong University annunciò il \textbf{primo attacco a SHA-1}, con una complessità di \(2^{69}\) operazioni. 
+Pochi mesi dopo fu annunciato un attacco a \(2^{63}\) operazioni.
+Un normale attacco che sfrutta il paradosso del compleanno avrebbe una complessità di \(2^{80}\) operazioni come visto prima.
 
 \vspace{1cm}
 
@@ -70,15 +71,15 @@ Nel 1999 DESCracker era già capace di eseguire \(2^{56}\) operazioni in 56 ore,
 \begin{frame}
 \frametitle{Google SHAttered}
 
-In 2 anni hanno trovato un modo per generare due PDF diversi con lo stesso hash SHA-1 usando un prefisso specifico per il PDF.
-Fino a quel momento l'industria era ancora poco propensa ad abbandonare SHA-1 per la mancanza di un esempio pratico che dimostrasse la collisione.
+In 2 anni hanno trovato un modo per generare \textbf{due PDF diversi con lo stesso hash SHA-1}.
+Fino a quel momento \textbf{l'industria era ancora poco propensa ad abbandonare SHA-1} per la mancanza di un \textbf{esempio pratico} che dimostrasse la collisione.
 \begin{itemize}
     \item 9 quantiglioni (\(9,223,372,036,854,775,808\)) di calcoli SHA-1 in totale
-    \item 6.500 anni di calcolo CPU per completare la prima fase dell'attacco
-    \item 110 anni di calcolo GPU per completare la seconda fase 
+    \item \textbf{6.500 anni di calcolo CPU} per completare la prima fase dell'attacco
+    \item \textbf{110 anni di calcolo GPU} per completare la seconda fase 
 \end{itemize}
 
-L'attacco SHA-1 shattered è ancora più di 100.000 volte più veloce di un attacco brute force, che rimane impraticabile (\(2^{63}\) operazioni).
+L'attacco SHA-1 shattered è ancora più di \textbf{100.000 volte più veloce di un attacco brute force}, che rimane impraticabile (\(2^{63}\) operazioni).
 \end{frame}
 
 \begin{frame}
