--- a/latex/sections/3-appendici.tex
+++ b/latex/sections/3-appendici.tex
@@ -2,6 +2,21 @@
 %------------------------------------------------
 
 \begin{frame}
+\frametitle{Secure Hash Algorithm: Iterazioni}
+
+Ogni iterazione usa una funzione non lineare (\textit{f}) e una costante (\textit{k}) che varia a seconda dell'intervallo di iterazione.
+La costante k viene successivamente utilizzata all'interno della funzione di compressione.
+
+\begin{itemize}
+    \item \textbf{Iterazioni 0-19}: \textit{f = (b and c) or (not b and d)} con \textit{k = 0x5A827999}
+    \item \textbf{Iterazioni 20-39}: \textit{f = b xor c xor d} con \textit{k = 0x6ED9EBA1}
+    \item \textbf{Iterazioni 40-59}: \textit{f = (b and c) or (b and d) or (c and d)} con \textit{k = 0x8F1BBCDC}
+    \item \textbf{Iterazioni 60-79}: \textit{f = b xor c xor d} con \textit{k = 0xCA62C1D6}
+    \end{itemize}
+
+\end{frame}
+
+\begin{frame}
 \frametitle{Quali utilizzi ci sono per le funzioni hash}
 \begin{itemize}
     \item \textbf{Message fingerprint} (integrità dei dati)
@@ -52,4 +67,22 @@ H-MAC viene aclcolato a blocchi e a seconda della chiave K bisognerà adattarla 
 
 Dove $K'$, $\text{opad}$ e $\text{ipad}$ sono costanti.
 
+\end{frame}
+
+\begin{frame}
+    \frametitle{Firma digitale con PGP}
+PGP calcola un hash dal testo in chiaro, e crea poi da questo hash la firma digitale usando la  \textbf{chiave privata del mittente}.
+\begin{center}
+    \includegraphics[width=0.5\textwidth]{img/1-img/PGP_diagram_IT.png}
+\end{center}
+\end{frame}
+
+\begin{frame}
+    \frametitle{Firma digitale con PGP Parte 2}
+Il destinatario del messaggio calcola il message digest dal testo in chiaro decifrato, e poi usa la \textbf{chiave pubblica del mittente} per decifrare la firma digitale.
+Si può verificare la non alterazione del messaggio e l'autenticità del mittente.
+
+\begin{center}
+    \includegraphics[width=0.5\textwidth]{img/1-img/PGP_diagram_IT.png}
+\end{center}
 \end{frame}
