--- a/latex/sections/3-appendici.tex
+++ b/latex/sections/3-appendici.tex
@@ -1,5 +1,11 @@
-\section{Utilizzi funzioni hash}
+\section{Apprendice}
 %------------------------------------------------
+
+\begin{frame}[plain] 
+    \begin{center}
+		{\Huge Appendici varie della presentazione}
+	\end{center}
+\end{frame}
 
 \begin{frame}
 \frametitle{Secure Hash Algorithm: Iterazioni}
@@ -85,4 +91,21 @@ Si può verificare la non alterazione del messaggio e l'autenticità del mittent
 \begin{center}
     \includegraphics[width=0.5\textwidth]{img/1-img/PGP_diagram_IT.png}
 \end{center}
+\end{frame}
+
+
+\begin{frame}
+    \frametitle{Blocco finale di SHA-1}
+\begin{center}
+    \includegraphics[width=1\textwidth]{img/3-img/blocco-finale1.png}
+\end{center}
+
+\end{frame}
+
+\begin{frame}
+    \frametitle{Blocco finale di SHA-1 Soluzione}
+\begin{center}
+    \includegraphics[width=1\textwidth]{img/3-img/blocco-finale2.png}
+\end{center}
+
 \end{frame}
