--- a/latex/sections/1-introduzione.tex
+++ b/latex/sections/1-introduzione.tex
@@ -91,7 +91,7 @@
 
 	\vspace{1cm}
 
-	I digest prodotti da SHA-1 sono di \textbf{160 bit}.
+	I digest prodotti da SHA-1 sono di \textbf{160 bit} e al massimo può elaborare messaggi di \textbf{2\textsuperscript{64} - 1} bit.
 \end{frame}
 
 \begin{frame}
