update fitignore e presentazione latex

--- a/latex/sections/1-introduzione.tex
+++ b/latex/sections/1-introduzione.tex
@@ -97,8 +97,8 @@
 \begin{frame}
 	\frametitle{Secure Hash Algorithm: Merkle-Damgård}
 
-	Le funzioni di hash come SHA-1, MD5 e SHA-2 sono basate sul costrutto di \textbf{Merkle-Damgård}, che prefede una funzione
-	di compressione resistente alle collisioni per creare una funzione di hash resistente alle collisioni.
+	Le funzioni di hash come SHA-1, MD5 e SHA-2 sono basate sul costrutto di \textbf{Merkle-Damgård}, essi dimostrarono in modo indipndente
+	che utilizando \textbf{un appropriato schema di padding} e la funzione di compressione è \textbf{resistente alle collisioni}, allora anche la \textbf{funzione di hash è resistente alle collisioni}.
 
 	\vspace{1cm}
 
