update presentazione e script formattazione

--- a/latex/sections/1-introduzione.tex
+++ b/latex/sections/1-introduzione.tex
@@ -110,6 +110,16 @@
 
 
 \begin{frame}
+	\frametitle{Secure Hash Algorithm: costruzione Merkle-Damgård}
+	Le funzioni di hash come SHA-1, MD5 e SHA-2 sono basate sul costrutto di \textbf{Merkle-Damgård}, essi dimostrarono in modo indipndente
+	che utilizando \textbf{un appropriato schema di padding} e la funzione di compressione è \textbf{resistente alle collisioni}, allora anche la \textbf{funzione di hash è resistente alle collisione}.
+
+	\begin{center}
+		\includegraphics[width=0.8\textwidth]{img/1-img/Merkle-Damgard.png}
+	\end{center}
+\end{frame}
+
+\begin{frame}
 	\frametitle{Secure Hash Algorithm: Elaborazione dei blocchi}
 
 	\begin{columns}
