--- a/latex/sections/2-attacchi.tex
+++ b/latex/sections/2-attacchi.tex
@@ -2,6 +2,12 @@
 
 %------------------------------------------------
 
+\begin{frame}[plain]
+	\begin{center}
+		{\Huge Attacchi}
+	\end{center}
+\end{frame}
+
 \begin{frame}
 	\frametitle{Attacco ad estensione di lunghezza (1/2)}
 	Se un attaccante conosce l'hash del messaggio \( h(m) \) può calcolare \( h(m || m') \) dove \( m' \) è un \textbf{messaggio arbitrario}.
