added new references

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -193,6 +193,8 @@
 		\item \href{https://csrc.nist.gov/pubs/fips/180-4/upd1/final}{Link al documento NIST FIPS 180-4}
 		\item \href{https://shattered.io}(Google SHA-1 collision: shattered)
 		\item \href{https://shattered.io/static/shattered.pdf}{The first collision for full SHA-1}
+		\item \href{https://en.wikipedia.org/wiki/SHA-1}{Pseudocodice SHA-1}
+		\item \href{https://github.com/clibs/sha1}{Implementazione sha1 in C}
 	\end{itemize}
 \end{frame}
 
