update attacchi tex

--- a/latex/sections/2-attacchi.tex
+++ b/latex/sections/2-attacchi.tex
@@ -119,7 +119,7 @@
 		\item \textbf{110 anni di calcolo GPU} per completare la seconda fase
 	\end{itemize}
 
-	L'attacco SHA-1 shattered è ancora più di \textbf{100.000 volte più veloce di un attacco brute force}, che rimane impraticabile (\(2^{63}\) operazioni).
+	L'attacco SHA-1 shattered è ancora più di \textbf{100.000 volte più veloce di un attacco brute force}.
 \end{frame}
 
 \begin{frame}
