update attacchi tex

--- a/latex/sections/2-attacchi.tex
+++ b/latex/sections/2-attacchi.tex
@@ -100,11 +100,11 @@
 	\frametitle{Primi attacchi a SHA-1}
 	Nel \textbf{2005} il team di ricerca della Shandong University annunciò il \textbf{primo attacco a SHA-1}, con una complessità di \(2^{69}\) operazioni.
 	Pochi mesi dopo fu annunciato un attacco a \(2^{63}\) operazioni.
-	Un normale attacco che sfrutta il paradosso del compleanno avrebbe una complessità di \(2^{80}\) operazioni come visto prima.
 
 	\vspace{1cm}
 
 	Nel 1999 DESCracker era già capace di eseguire \(2^{56}\) operazioni in 56 ore, seguendo la legge di Moore i tempi di calcolo dovevano già essere alla portata di governi e organizzazioni criminali nel 2010.
+	Nonostante questo finchè non si vede il morto non si crede all'omicidio.
 \end{frame}
 
 
@@ -114,7 +114,7 @@
 	In 2 anni hanno trovato un modo per generare \textbf{due PDF diversi con lo stesso hash SHA-1}.
 	Fino a quel momento \textbf{l'industria era ancora poco propensa ad abbandonare SHA-1} per la mancanza di un \textbf{esempio pratico} che dimostrasse la collisione.
 	\begin{itemize}
-		\item 9 quantiglioni (\(9,223,372,036,854,775,808\)) di calcoli SHA-1 in totale
+		\item 9 quadrilioni (\(9,223,372,036,854,775,808\)) di calcoli SHA-1 in totale
 		\item \textbf{6.500 anni di calcolo CPU} per completare la prima fase dell'attacco
 		\item \textbf{110 anni di calcolo GPU} per completare la seconda fase
 	\end{itemize}
