--- a/latex/sections/3-appendici.tex
+++ b/latex/sections/3-appendici.tex
@@ -25,10 +25,9 @@
 \begin{frame}
 	\frametitle{Quali utilizzi ci sono per le funzioni hash}
 	\begin{itemize}
-		\item \textbf{Message fingerprint} (integrità dei dati)
-		\item \textbf{Password hashing}
-		\item \textbf{Digital signature} (solo dell'hash)
-		\item \textbf{Entity Authentication/Identification} (meccanismo challenge-response)
+		\item \textbf{Message fingerprint}(Integrità dei dati)
+		\item \textbf{Password hashing}(Database di password)
+		\item \textbf{Entity Authentication/Identification}(meccanismo challenge-response prevenire impersonificazione)
 		\item \textbf{Message Authentication} (MAC)
 		\item \textbf{Encryption} (pseudorandom bit stream)
 	\end{itemize}
@@ -57,7 +56,7 @@
 	\vspace{1cm}
 
 	H-MAC esegue una funzione di hash due o tre volte a partire da una stessa chiave. In teoria, H-MAC potrebbe essere
-	calcolato con qualsiasi funzione hash, anche se in pratica si utilizzano quasi sempre SHA-1 o MD5 (entrambi obsoleti).
+	calcolato con qualsiasi funzione hash, anche se in pratica si utilizzano quasi sempre \textbf{SHA-1 o MD5 (entrambi obsoleti)}.
 
 
 \end{frame}
@@ -65,7 +64,7 @@
 \begin{frame}
 	\frametitle{H-MAC Parte 2}
 
-	H-MAC viene aclcolato a blocchi e a seconda della chiave K bisognerà adattarla alla lunghezza del blocco.
+	H-MAC viene calcolato a blocchi e a seconda della chiave K bisognerà adattarla alla lunghezza del blocco.
 
 	\[
 		\text{H-MAC}(K, M') = H((K' \oplus \text{opad}) \| H((K' \oplus \text{ipad}) \| M'))
@@ -139,12 +138,32 @@
 	\vspace{1cm}
 
 	\begin{verbatim}
-    return type: integer
-	leftRotate(integer value, integer count) 
+	retuen type-> uint32_t 
+	
+	leftRotate(uint32_t value, unsigned int count) 
 	{
-    return 
-		(value << count) | (value >> (32 - count));
-	}	
+	return (value << count) | (value >> (32 - count));
+	}
     \end{verbatim}
+\end{frame}
 
+\begin{frame}[fragile]
+	\frametitle{Esempio con un numero a 8 bit}
+
+	Rotazione di 3 bit a sinistra di un numero a 8 bit.
+
+	\begin{verbatim}
+
+	Valore iniziale:    		
+	10110101
+
+	-> Shift a Sx di 3 bit:
+	10101xxx
+	
+	-> Shift a Dx di (8-3) bit:
+	00000101
+
+	Concateno i due risultati: 10101|101
+	
+	\end{verbatim}
 \end{frame}
