--- a/latex/sections/2-attacchi.tex
+++ b/latex/sections/2-attacchi.tex
@@ -53,7 +53,7 @@
 	\]
 
 	\[
-		P(\text{nessuna collisione}) = \frac{365!}{365^(p-1) (365 - n)!}
+		P(\text{nessuna collisione}) = \frac{365!}{365^{p-1} (365 - p)!}
 	\]
 
 \end{frame}
@@ -68,7 +68,7 @@
 	\]
 
 	\[
-		P(\text{almeno una collisione}) = 1 - \frac{365!}{365^(p-1) (365 - n)!}
+		P(\text{almeno una collisione}) = 1 - \frac{365!}{365^{p-1} (365 - p)!}
 	\]
 
 \end{frame}
